meson: compare_size targets

--- a/appl/meson.build
+++ b/appl/meson.build
@@ -43,6 +43,7 @@ foreach app : ['a',
                             output : ['freertos-' + app + '.ll.o'],
                             command : llc_cmd)
 
+  elf_targets = []
   foreach t : ara_gen_freertos_targets
     name_prefix = 'freertos-' + app + '-' + t
     os_target = custom_target(name_prefix + '-os',
@@ -70,8 +71,11 @@ foreach app : ['a',
                                command: objcopy_cmd)
     run_target('flash_' + name_prefix, command: ['st-flash', 'write', bin_target, '0x8000000'])
     run_target('size_' + name_prefix, command: [size, elf_target])
+	elf_targets += elf_target
 
   endforeach
+
+  run_target('compare_size-' + app, command: [size, elf_targets])
 
   freertos_targets += ll_target
 endforeach
