generator: freertos syscall_full_initialzed
generate stacks, TCBs and the ready list as if it was done by
xTaskCreate or xTaskCreateStatic.

--- a/settings/meson.build
+++ b/settings/meson.build
@@ -91,6 +91,7 @@ ara_gen_cmd = [bash, sh,
 
 ara_gen_freertos_targets = ['vanilla',
                             'instances_full_static',
+                            'instances_full_initialized',
                            ]
 
 foreach t : ara_gen_freertos_targets
