test: moves cfg_prep right after ir-reader step and adds printer step to cfg_stats test

--- a/test/meson.build
+++ b/test/meson.build
@@ -119,6 +119,12 @@ test('cfg_stats',
    env : [python_path]
 )
 
+test('cfg_stats_no_passes',
+   py3_inst,
+   args: [files('../ara.py'), files('../build/appl/FreeRTOS/GPSLogger/gpslogger-Libs_Adafruit_SSD1306_Adafruit_SSD1306.ll'), '--os', 'FreeRTOS', '--step-settings', files('cfg_stats_no_passes.json'), '--log-level', 'debug'],
+   env : [python_path]
+)
+
 test('dummy-test',
    py3_inst,
    args: [files('../ara.py'), 'empty', '--os', 'FreeRTOS',
