ara_tester: switch to gpslogger

--- a/meson.build
+++ b/meson.build
@@ -62,7 +62,7 @@ extra_settings = files('test/extra_settings.json')
 # TODO convert this into a proper test
 test('ara_tester',
    py3_inst,
-   args: [files('ara.py'), freertos_sse,
+   args: [files('ara.py'), gpslogger_targets,
           '--log-level', 'debug', '--dump',
           '--step-settings', extra_settings],
    env : [python_path]
