--- a/tools/meson.build
+++ b/tools/meson.build
@@ -1,3 +1,5 @@
 tools_dir = meson.current_source_dir()
 
 compare_nm = [join_paths(tools_dir, 'compare_nm.py')]
+compare_time = [join_paths(tools_dir, 'compare_time.py'), meson.build_root()]
+gdb_hw_script = [join_paths(tools_dir, 'gdb_stm32.sh')]
