--- a/test/meson.build
+++ b/test/meson.build
@@ -149,6 +149,42 @@ test('copter_stats_no_passes',
    env : [python_path]
 )
 
+test('gps_ipstats',
+   py3_inst,
+   args: [files('../ara.py'), gpslogger_targets, '--os', 'FreeRTOS', '--step-settings', files('icfg_stats.json'), '--log-level', 'info'],
+   env : [python_path]
+)
+
+test('gps_ipstats_no_passes',
+   py3_inst,
+   args: [files('../ara.py'), gpslogger_targets, '--os', 'FreeRTOS', '--step-settings', files('icfg_stats_no_passes.json'), '--log-level', 'info'],
+   env : [python_path]
+)
+
+test('smart_ipstats',
+   py3_inst,
+   args: [files('../ara.py'), smartplug_targets, '--os', 'FreeRTOS', '--step-settings', files('icfg_stats.json'), '--log-level', 'info'],
+   env : [python_path]
+)
+
+test('smart_ipstats_no_passes',
+   py3_inst,
+   args: [files('../ara.py'), smartplug_targets, '--os', 'FreeRTOS', '--step-settings', files('icfg_stats_no_passes.json'), '--log-level', 'info'],
+   env : [python_path]
+)
+
+test('copter_ipstats',
+   py3_inst,
+   args: [files('../ara.py'), osek_coptermok[0], '--os', 'OSEK', '--oilfile', osek_coptermok[1], '--step-settings', files('icfg_stats.json'), '--log-level', 'info'],
+   env : [python_path]
+)
+
+test('copter_ipstats_no_passes',
+   py3_inst,
+   args: [files('../ara.py'), osek_coptermok[0], '--os', 'OSEK', '--oilfile', osek_coptermok[1], '--step-settings', files('icfg_stats_no_passes.json'), '--log-level', 'info'],
+   env : [python_path]
+)
+
 test('dummy-test',
    py3_inst,
    args: [files('../ara.py'), 'empty', '--os', 'FreeRTOS',
