steps/native/meson.build: fix double entry of native_steps target

--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -29,6 +29,7 @@ native_step_pyx_gen = custom_target('native_step_pyx',
                  'cfg_prep.pxd',
                  'const_prop.pxd',
                  'comp_insert.pxd',
+                 'const_prop.pxd',
                  'cstep.pxd',
                  'dead_code_elimination.pxd',
                  'fn_single_exit.pxd',
