subprojects: add svf

--- a/meson.build
+++ b/meson.build
@@ -27,6 +27,14 @@ else
     pyllco_dir = pyllco_proj.get_variable('pyllco_dir')
 endif
 
+cmake = import('cmake')
+
+# Configure the CMake project
+svf_proj = cmake.subproject('svf', cmake_options: '-DLLVM_DIR=' + llvm_dep.get_variable(configtool: 'prefix'))
+Svf = svf_proj.dependency('Svf', include_type: 'system')
+Cudd = svf_proj.dependency('Cudd')
+LLVMSvf = svf_proj.dependency('LLVMSvf')
+LLVMCudd = svf_proj.dependency('LLVMCudd')
 
 cython_flags = ['-Wextra', '--cplus', '-3']
 
