libs: moved libs in seperate folder
meson doesn't support to inspect the same folder twice but as circular
includes are present we need to manage the includes before the
sources. Hence, includes are moved out of source folders to be handled
ahed of time.

--- a/libs/sra/meson.build
+++ b/libs/sra/meson.build
@@ -1,4 +1,6 @@
-libs_includes += ['-I', meson.current_source_dir()]
+libsra_objs = []
+
+subdir('generic')
 if get_option('arch') == 'arm'
   subdir('arm')
 else
@@ -7,3 +9,9 @@ else
 endif
 
 
+libsra_ar = custom_target('libsra.a',
+                          input: libsra_objs,
+                          output: 'libsra.a',
+                          command: ar_cmd)
+
+ld_flags += ['-Wl,-L' + meson.current_build_dir(), '-Wl,-lsra']
