lib_platform: use power management to shut down qemu
this uses
https://github.com/luhsra/qemu_stm32/commit/d91612cb1d8d738f9d1134a99dccf9a678dfd793

--- a/libs/platform/stm32/Drivers/STM32F1xx_HAL_Driver/Src/meson.build
+++ b/libs/platform/stm32/Drivers/STM32F1xx_HAL_Driver/Src/meson.build
@@ -2,7 +2,8 @@ src_files = [
   'stm32f1xx_hal_rcc.c',
   'stm32f1xx_hal.c',
   'stm32f1xx_hal_cortex.c',
-  'stm32f1xx_hal_rcc_ex.c'
+  'stm32f1xx_hal_rcc_ex.c',
+  'stm32f1xx_hal_pwr.c',
 ]
 
 obj_targets = []
