--- a/libs/sra/generic/meson.build
+++ b/libs/sra/generic/meson.build
@@ -1,9 +1,14 @@
-libsra_objs += custom_target('libsra-statistics.o',
-                             input: 'statistics.cc',
-                             output: 'statistics.cc.o',
-                             depfile: 'statistics.cc.dep',
-                             command: clang_cpp +
-                                      libs_includes +
-                                      obj_flags +
-                                      clang_flags)
-
+src_files = [
+  'statistics',
+  'print_functions',
+]
+foreach src: src_files
+  libsra_objs += custom_target(src,
+                               input: src+'.cc',
+                               output: src+'.cc.o',
+                               depfile: src+'.cc.dep',
+                               command: clang_cpp+
+                                        libs_includes +
+                                        obj_flags +
+                                        clang_flags)
+endforeach
