--- a/test/native_step_test/meson.build
+++ b/test/native_step_test/meson.build
@@ -6,24 +6,24 @@ test('native-steps',
 
 test('bb-split',
   py3_inst,
-  args: [files('run_test_step.py'), 'FreeRTOS', 'BBSplitTest', gpslogger_targets],
+  args: [files('run_test_step.py'), 'BBSplitTest', gpslogger_application],
   env: [python_path]
 )
 
 test('comp-insert',
   py3_inst,
-  args: [files('run_test_step.py'), 'FreeRTOS', 'CompInsertTest', gpslogger_targets],
+  args: [files('run_test_step.py'), 'CompInsertTest', gpslogger_application],
   env: [python_path]
 )
 
 test('fn-single-exit',
   py3_inst,
-  args: [files('run_test_step.py'), 'FreeRTOS', 'FnSingleExitTest', freertos_multi_exit],
+  args: [files('run_test_step.py'), 'FnSingleExitTest', freertos_multi_exit],
   env: [python_path]
 )
 
 test('llvm-map',
   py3_inst,
-  args: [files('run_test_step.py'), 'FreeRTOS', 'LLVMMapTest', gpslogger_targets],
+  args: [files('run_test_step.py'), 'LLVMMapTest', gpslogger_application],
   env: [python_path]
 )
