meson.build: make llvm binaries dependent on llvm-config
Specifying the llvm-config version now is enough to also find all llvm
binaries needed by ARA. This also circumvent the missing version
detection of meson before 0.54.

--- a/meson.build
+++ b/meson.build
@@ -16,14 +16,12 @@ py3_inst = py3_mod.find_installation('python3', modules: ['pydot', 'graph_tool']
 ## llvm dependencies
 llvm_version = ['>=9', '<10']
 llvm_dep = dependency('llvm', version: llvm_version, include_type: 'system')
-clang = find_program('clang', version: llvm_version)
-### FIXME: enable find_program if it correctly detects llc version, needs meson > 0.54
-llc = find_program('llc')
-### llc = find_program('llc', version: llvm_version)
-llvm_link = find_program('llvm-link')
-### llvm_link = find_program('llvm-link', llvm_version)
-llvm_opt = find_program('opt')
-### llvm_opt = find_program('opt', llvm_version)
+
+llvm_bindir = llvm_dep.get_variable(configtool: 'bindir')
+clang = find_program(llvm_bindir / 'clang')
+llc = find_program(llvm_bindir / 'llc')
+llvm_link = find_program(llvm_bindir / 'llvm-link')
+llvm_opt = find_program(llvm_bindir / 'opt')
 
 boost_dep = dependency('boost', modules: ['graph', 'python3'], include_type: 'system')
 graph_tool_dep = dependency('graph-tool-py' + py3_inst.language_version(), include_type: 'system')
